external/lmgc90_dev-fortran_lib/src/ChiPy/mailx/wrap_poroMAILx.h

 /**
  * @fn void poroMAILx_GetStrain(int ivalue1, double** matrix_out, int* dim1, int* dim2, int ivalue4=0)
  * @brief Get a copy of a strain of a given body
  *
  * @cond PYDOC
  * Python usage : strain = poroMAILx_GetStrain(ibdyty, required_field=0)
  * @param ibdyty (integer)          : rank of considered body
  * @param required_field (integer)  : required additional field
  * @return strain (double 2D-array) : the desired strain
  * @endcond
  *
  *
  * @cond CDOC
  * @param[in]  ivalue1 (int)         : id of considered body
  * @param[out] matrix_out (double**) : the desired strain
  * @param[out] dim1 (int*)           : first dimension of matrix_out
  * @param[out] dim2 (int*)           : second dimension of matrix_out
  * @param[in]  ivalue4 (int)         : required field
  * @endcond
  */
  extern "C" void poroMAILx_GetStrain(int ivalue1, double** matrix_out, int* dim1, int* dim2, int ivalue4=0);
 /**
  * @fn void poroMAILx_ComputeContactDetectionConfiguration(void)
  * @brief compute the contact detection configuration
  *
  * @cond PYDOC
  * python usage : poroMAILx_ComputeContactDetectionConfiguration()
  * @endcond
 */
 extern "C" void poroMAILx_ComputeContactDetectionConfiguration(void);
 /**
  * @fn void poroMAILx_SetPreconAllBodies(void)
  * @brief ask for precomputation of the W matrix on support node dofs of contactors for all bodies. Assumes bulk behaviour is linear. 
  *    
  * @cond PYDOC
  * python usage : poroMAILx_SetPreconAllBodies()
  * @endcond
  */
  extern "C" void poroMAILx_SetPreconAllBodies(void);
 /**
  * @fn void poroMAILx_ComputePreconW(void)
  * @brief compute the precon W on precon bodies
  *
  * @cond PYDOC
  * python usage : poroMAILx_ComputePreconW()
  * @endcond
  */
  extern "C" void poroMAILx_ComputePreconW(void);
 /**
  * @fn int poroMAILx_GetNbPoroMAILx(void)
  * @brief Get the number of poroMAILx
  *
  * @cond PYDOC
  * python usage : nb_poroMAILx = poroMAILx_GetNbPoroMAILx()
  *
  * @return nb_poroMAILx (integer) : number of poroMAILx
  * @endcond
  *
  * @cond CDOC
  * @return (int) number of poroMAILx
  * @endcond
  */
  extern "C" int poroMAILx_GetNbPoroMAILx(void);
 /**
  * @fn void poroMAILx_GetCoor(int idBody,  double ** matrix_out, int * dim1, int * dim2)
  * @brief return node coordinates of idBody
  *
  * @cond PYDOC
  * python usage : array = poroMAILx_GetCoor(idBody)
  * @param[in] IdBody (integer)     : id of the concerned body
  * @return array (double 2D-array) : coordinates
  * @endcond
  *
  * @cond CDOC
  * @param[in]     IdBody (int)           : id of the concerned body
  * @param[in,out] matrix_out (double **) : xxx
  * @param[in]     dim1 (int *)  i        : matrix_out first dimension
  * @param[in]     dim2 (int *)           : matrix_out second dimension
  * @endcond
  */
  extern "C" void poroMAILx_GetCoor(int idBody, double ** matrix_out, int * dim1, int * dim2);
 /**
  * @fn void poroMAILx_GetAll(int idBody,  double ** matrix_out, int * dim1, int * dim2)
  * @brief return poro mechanical data computed for idBody
  *
  * @cond PYDOC
  * python usage : array = poroMAILx_GetAll(idBody)
  * @param[in] IdBody (integer)     : id of the concerned body
  * @return array (double 2D-array) : poro mechanical data
  * @endcond
  *
  * @cond CDOC
  * @param[in]     IdBody (int)           : id of the concerned body
  * @param[in,out] matrix_out (double **) : xxx
  * @param[in]     dim1 (int *)  i        : matrix_out first dimension
  * @param[in]     dim2 (int *)           : matrix_out second dimension
  * @endcond
  */
  extern "C" void poroMAILx_GetAll(int idBody, double ** matrix_out, int * dim1, int * dim2);
 /**
  * @fn void poroMAILx_GetGrad(int ivalue1, double** matrix_out, int* dim1, int* dim2)
  * @brief Get a copy of a grad P of a given body
  *
  * @cond PYDOC
  * Python usage : grad = poroMAILx_GetGrad(ibdyty)
  * @param ibdyty (integer)        : rank of considered body
  * @return grad (double 2D-array) : the desired grad
  * @endcond
  *
  *
  * @cond CDOC
  * @param[in]  ivalue1 (int)         : id of considered body
  * @param[out] matrix_out (double**) : the desired grad
  * @param[out] dim1 (int*)           : first dimension of matrix_out
  * @param[out] dim2 (int*)           : second dimension of matrix_out
  * @endcond
  */
  extern "C" void poroMAILx_GetGrad(int ivalue1, double** matrix_out, int* dim1, int* dim2);
 /**
  * @fn void poroMAILx_GetFlux(int ivalue1, double** matrix_out, int* dim1, int* dim2)
  * @brief Get a copy of a Darcy Flux of a given body
  *
  * @cond PYDOC
  * Python usage : flux = poroMAILx_GetFlux(ibdyty)
  * @param ibdyty (integer)        : rank of considered body
  * @return flux (double 2D-array) : the desired flux
  * @endcond
  *
  *
  * @cond CDOC
  * @param[in]  ivalue1 (int)         : id of considered body
  * @param[out] matrix_out (double**) : the desired flux
  * @param[out] dim1 (int*)           : first dimension of matrix_out
  * @param[out] dim2 (int*)           : second dimension of matrix_out
  * @endcond
  */
  extern "C" void poroMAILx_GetFlux(int ivalue1, double** matrix_out, int* dim1, int* dim2);
 /**
  * @fn void poroMAILx_GetInternal(int idBody,  double ** matrix_out, int * dim1, int * dim2)
  * @brief return internal mechanical data computed for idBody
  *
  * @cond PYDOC
  * python usage : array = poroMAILx_GetInternal(idBody)
  * @param[in] IdBody (integer)     : id of the concerned body
  * @return array (double 2D-array) : mechanical internal data
  * @endcond
  *
  * @cond CDOC
  * @param[in]     IdBody (int)           : id of the concerned body
  * @param[in,out] matrix_out (double **) : matrix of internal data
  * @param[in]     dim1 (int *)  i        : matrix_out first dimension
  * @param[in]     dim2 (int *)           : matrix_out second dimension
  * @endcond
  */
  extern "C" void poroMAILx_GetInternal(int idBody, double ** matrix_out, int * dim1, int * dim2);
 /**
  * @fn void poroMAILx_GetConnectivity(int idBody,  int ** i4_vector, int * i4_size)
  * @brief return connectivity of idBody elements
  *
  * @cond PYDOC
  * python usage : vector = poroMAILx_GetConnectivity(idBody)
  * @param[in] IdBody (integer) : id of the concerned body
  * @return    vector (integer) : connectivity
  * @endcond
  *
  * @cond CDOC
  * @param[in]  IdBody (int)      : id of the concerned body
  * @param[out] i4_vector (int**) : xxx
  * @param[out] i4_size (int*)    : dimension of i4_vector
  * @endcond
  */
  extern "C" void poroMAILx_GetConnectivity(int idBody, int ** i4_vector, int * i4_size );
 /**
  * @fn void poroMAILx_SetVlocyDrivenDof(int IdBody, int f_dof, int f_node, double f_value)
  * @brief Apply Drv Dof on a given body
  *
  * @cond PYDOC
  * python usage : poroMAILx_SetVlocyDrivenDof(IdBody, f_dof, f_node, f_value)
  * @param[in] IdBody (integer) : id of the concern body
  * @param[in] f_dof (integer)  : dof of the concern node
  * @param[in] f_node (integer) : node
  * @param[in] f_value (double) : value of the drvdof
  * @endcond
  *
  * @cond CDOC
  * @param[in] IdBody (int)               : id of the concern body
  * @param[in] f_dof  (int)               : dof of the drvdof
  * @param[in] f_node (int)               : node
  * @param[in] f_value (double)           : value
  * @endcond
  */
  extern "C" void poroMAILx_SetVlocyDrivenDof(int IdBody, int f_dof, int f_noce , double f_value);
 /**
  * @fn void poroMAILx_AddFieldLoad(int IdBody, double * rvector_in, int rlength_in)
  * @brief Add elementary load through a nodal external field on a given body
  *
  * @cond PYDOC
  * python usage : poroMAILx_AddFieldLoad(IdBody, Ideriv, f)
  * @param[in] IdBody (integer) : id of the concern body
  * @param[in] f (double array) : value of the field
  * @endcond
  *
  * @cond CDOC
  * @param[in] IdBody (int)               : id of the concern body
  * @param[in] vector_in (double[length]) : value of the field
  * @param[in] length (int)               : size of the field
  * @endcond
  */
  extern "C" void poroMAILx_AddFieldLoad(int IdBody, double * rvector_in, int rlength_in);
 /**
  * @fn void poroMAILx_WriteOutDof(void)
  * @brief Write ascii DOF.OUT file. Can be activate only each N step
  *
  * @cond PYDOC
  * python usage : poroMAILx_WriteOutDof()
  * @endcond
  */
  extern "C" void poroMAILx_WriteOutDof(void);
 /**
  * @fn void poroMAILx_PostModels(void)
  * @brief load from MAILx and models for post
  *
  * @cond PYDOC
  * python usage : poroMAILx_PostModels()
  * @endcond
  */
  extern "C" void poroMAILx_PostModels(void);
/**
  * @fn void poroMAILx_CleanMemory(void)
  * @brief Free all memory allocated within poroMAILx module
  *
  * @cond PYDOC
  * python usage : poroMAILx_CleanMemory()
  * @endcond
  */
  extern "C" void poroMAILx_CleanMemory(void);
 /**
  * @fn void poroMAILx_CheckProperties(void)
  * @brief check if model and material are matching ; set material parameter if external model
  *
  * @cond PYDOC
  * python usage : poroMAILx_CheckProperties()
  * @endcond
  */
  extern "C" int poroMAILx_CheckProperties(void);
 /**
  * @fn void poroMAILx_GetNbGpByElem(char** string_vector, int* vector_size, int* string_size, , int** i4_vector, int* i4_size, int** i4_vector_2, int* i4_size_2)
  * @brief Get the list of finite elements for porox models and the associated number of Gauss Points for MECA and THER physics.
  *
  * Here memory is allocated within lmgc90 so that the pointer can be freely
  * modified by third parties without nasty effect on lmgc90 functioning.
  *
  * @cond PYDOC
  * python usage : names, meca_nb, ther_nb = poroMAILx_GetNbGpByElem()
  * @return names   (string list) : list of the finite elements
            meca_nb (integer list): list of the number of Gauss Points for MECA
            ther_nb (integer list): list of the number of Gauss Points for THER
  * @endcond
  *
  * @cond CDOC
  * @param[out] string_vector (char **) : list of finite elements
  * @param[out] vector_size (int * ) : size of string_vector
  * @param[out] string_size (int * ) : size of each string
  * @param[out] i4_vector (int**) : reference on the integer array holding the list of number of Gauss Points for MECA
  * @param[out] i4_size (int*) : reference on the size of the array referenced by i4_vector
  * @param[out] i4_vector_2 (int**) : reference on the integer array holding the list of number of Gauss Points for THER
  * @param[out] i4_size_2 (int*) : reference on the size of the array referenced by i4_vector_2
  * @endcond
  */
  extern "C" void poroMAILx_GetNbGpByElem(char** string_vector, int* vector_size, int* string_size, int** i4_vector, int* i4_size, int** i4_vector_2, int* i4_size_2);