external/lmgc90_dev-fortran_lib/src/ChiPy/mailx/wrap_poroMAILx.f90


      if( nbDIME == 2 ) then
        ivalue2 = 5
        allocate(S(ivalue2,ivalue3))
        CALL get_2DNodalStress_poroMAILx(ivalue1,S)
      else
        ivalue2 = 7
        allocate(S(ivalue2,ivalue3))
        CALL get_3DNodalStress_poroMAILx(ivalue1,S,ivalue4)
      end if

      stress = c_loc(S(1,1))

    END SUBROUTINE
    
    SUBROUTINE GetStrain(ivalue1,strain,ivalue2,ivalue3,ivalue4) bind(c, name='poroMAILx_GetStrain')
      use overall, only: nbDIME
      IMPLICIT NONE
      integer(c_int), intent(in), value :: ivalue1, ivalue4
      integer(c_int)                    :: ivalue2, ivalue3
      type(c_ptr)                       :: strain
      !
      real(c_double), dimension(:,:), pointer :: E

      ivalue3 = get_N_NODE_poroMAILx(ivalue1)

      if( nbDIME == 2 ) then
        ivalue2 = 5
        allocate(E(ivalue2,ivalue3))
        CALL get_2DNodalStrain_poroMAILx(ivalue1,E)
      else
        ivalue2 = 7
        allocate(E(ivalue2,ivalue3))
        CALL get_3DNodalStrain_poroMAILx(ivalue1,E,ivalue4)
      end if

      strain = c_loc(E(1,1))

    END SUBROUTINE

    SUBROUTINE ComputeContactDetectionConfiguration() bind(c, name='poroMAILx_ComputeContactDetectionConfiguration')
       !! PURPOSE
       !!  computes the contact configuration
       IMPLICIT NONE

       CALL compute_configurationTT_poroMAILx

    END SUBROUTINE ComputeContactDetectionConfiguration

    !da: fonction qui applique la precondensation a tous les coprs mailles pour
    !    la poro
    SUBROUTINE SetPreconAllBodies() bind(c, name='poroMAILx_SetPreconAllBodies')
       IMPLICIT NONE

       ! variables locales
       integer :: ibdyty ! indice de boucle sur les corps mailles pour la meca
 
       ! on applique la precondensation a chaque corps
       ! fd todo ce numero n'est pas le bon ca doit etre l'indice dans mailx et pas poroMAILx
       do ibdyty=1, get_nb_poroMAILx()
          CALL set_precon_body_poroMAILx(ibdyty)
       end do

    END SUBROUTINE SetPreconAllBodies

    SUBROUTINE ComputePreconW() bind(c, name='poroMAILx_ComputePreconW')
      IMPLICIT NONE

       CALL compute_precon_W_poroMAILx

    END SUBROUTINE

    !da: fonction qui renvoie le nombre de poroMAILx
    function GetNbPoroMAILx() bind(c, name='poroMAILx_GetNbPoroMAILx')

       implicit none

       ! valeur de retour
       integer(c_int) :: GetNbPoroMAILx ! nombre mailles pour la poro mecanique 

       GetNbPoroMAILx = get_nb_poroMAILx()

    end function GetNbPoroMAILx

    subroutine GetCoorPoroMAILx(idBody, ptr, dim1, dim2) BIND(c, name='poroMAILx_GetCoor')
      implicit none

      INTEGER(C_INT), INTENT(IN), VALUE :: IdBody
      type(c_ptr)    :: ptr
      integer(c_int) :: dim1, dim2

      real(kind=8), dimension(:,:), pointer :: all

      all => get_coor_poroMAILx(idBody)

      if( associated(all) ) then
        ptr  = c_loc(all(1,1))
        dim1 = size(all,1)
        dim2 = size(all,2)
      else
        ptr  = c_null_ptr
        dim1 = 0
        dim2 = 0
      end if

    end subroutine GetCoorPoroMAILx

    subroutine GetAllPoroMAILx(idBody,ptr, dim1, dim2) BIND(c, name='poroMAILx_GetAll')
      implicit none

      INTEGER(C_INT), INTENT(IN), VALUE :: IdBody
      type(c_ptr)    :: ptr
      integer(c_int) :: dim1, dim2

      real(kind=8), dimension(:,:), pointer :: all

      all => get_All_poroMAILx(idBody)

      if( associated(all) ) then
        ptr  = c_loc(all(1,1))
        dim1 = size(all,1)
        dim2 = size(all,2)
      else
        ptr  = c_null_ptr
        dim1 = 0
        dim2 = 0
      end if

    end subroutine GetAllPoroMAILx

    subroutine GetGrad(ivalue1,grad,ivalue2,ivalue3) bind(c, name='poroMAILx_GetGrad')
      use overall, only: nbDIME
      implicit none
      integer(c_int), intent(in), value :: ivalue1
      integer(c_int)                    :: ivalue2, ivalue3
      type(c_ptr)                       :: grad
      !
      real(c_double), dimension(:,:), pointer :: E

      ivalue2 = 3
      ivalue3 = get_N_NODE_poroMAILx(ivalue1)
      allocate(E(ivalue2,ivalue3))

      call get_NodalGrad_poroMAILx(ivalue1,E)

      grad = c_loc(E(1,1))

    end subroutine

    subroutine GetFlux(ivalue1,grad,ivalue2,ivalue3) bind(c, name='poroMAILx_GetFlux')
      use overall, only: nbDIME
      implicit none
      integer(c_int), intent(in), value :: ivalue1
      integer(c_int)                    :: ivalue2, ivalue3
      type(c_ptr)                       :: grad
      !
      real(c_double), dimension(:,:), pointer :: S

      ivalue2 = 3
      ivalue3 = get_N_NODE_poroMAILx(ivalue1)
      allocate(S(ivalue2,ivalue3))

      call get_NodalFlux_poroMAILx(ivalue1,S)

      grad = c_loc(S(1,1))

    end subroutine

    subroutine GetInternalPoroMAILx(idBody,ptr, dim1, dim2) BIND(c, name='poroMAILx_GetInternal')
      implicit none

      integer(C_INT), intent(in), value :: IdBody
      type(c_ptr)    :: ptr
      integer(c_int) :: dim1, dim2

      real(kind=8), dimension(:,:), pointer :: all

      all => get_Internal_poroMAILx(idBody)

      if( associated(all) ) then
        ptr  = c_loc(all(1,1))
        dim1 = size(all,1)
        dim2 = size(all,2)
      else
        ptr  = c_null_ptr
        dim1 = 0
        dim2 = 0
      end if

    end subroutine GetInternalPoroMAILx

    subroutine GetConnectivityPoroMAILx(idBody, ptr, dim1) BIND(c, name='poroMAILx_GetConnectivity')
      implicit none

      INTEGER(C_INT), INTENT(IN), VALUE :: IdBody
      type(c_ptr)    :: ptr
      integer(c_int) :: dim1

      integer(kind=4), dimension(:), pointer :: all

      all => get_connectivity_poroMAILx(idBody)

      if( associated(all) ) then
        ptr  = c_loc(all(1))
        dim1 = size(all)
      else
        ptr  = c_null_ptr
        dim1 = 0
      end if

    end subroutine GetConnectivityPoroMAILx

    SUBROUTINE SetVlocyDrivenDof(IdBody,f_dof,f_node,f_value) bind(c, name='poroMAILx_SetVlocyDrivenDof')
      IMPLICIT NONE
      INTEGER(C_INT), INTENT(IN), VALUE :: IdBody,f_dof
      INTEGER(C_INT), INTENT(IN), VALUE :: f_node
      REAL(C_DOUBLE), INTENT(IN), VALUE :: f_value

       !! PURPOSE
       !!  Apply a drvdof on a given body
       
       CALL set_vlocy_drvdof_poroMAILx(IdBody,f_dof,f_node,f_value)

    END SUBROUTINE

    SUBROUTINE AddFieldLoad(IdBody,f,f_size) bind(c, name='poroMAILx_AddFieldLoad')
      IMPLICIT NONE
      INTEGER(C_INT), INTENT(IN), VALUE :: IdBody,f_size
      REAL(C_DOUBLE), INTENT(in), dimension(f_size) :: f
       !! PURPOSE
       !!  Add a loading with an external field on a given body
       !!  You need to set this field in your models.dat
     
       CALL Add_Field_Load_bynode_poroMAILx(IdBody,f_size,f)

    END SUBROUTINE

    SUBROUTINE WriteOutDof() bind(c, name='poroMAILx_WriteOutDof')
       IMPLICIT NONE
       LOGICAL :: write_DOF
       INTEGER :: ifrom,ito
       !! PURPOSE
       !!  write ascii DOF.OUT file. Can be activate only each N step

       write_DOF = get_write_DOF_poroMAILx()

       IF (write_DOF) THEN
         ifrom = 1  
         ito   = get_nb_poroMAILx()
         CALL write_xxx_dof_poroMAILx(1,ifrom,ito)
       ENDIF

    END SUBROUTINE

    SUBROUTINE PostModels() bind(c, name='poroMAILx_PostModels')
      IMPLICIT NONE

       CALL post_models_poroMAILx
       CALL update_existing_entities_poroMAILx
       
    END SUBROUTINE

    subroutine CleanMemory() bind(c, name='poroMAILx_CleanMemory')
      implicit none

      call clean_memory_poroMAILx

    end subroutine

    subroutine CheckProperties() bind(c, name='poroMAILx_CheckProperties')
      implicit none

      if( get_nb_poroMAILx() < 1 ) return

      call check_properties_poroMAILx()
       
    end subroutine CheckProperties

    subroutine GetNbGpByElem(elems, esize, ssize, nbgps_m, nsize_m, nbgps_t, nsize_t) bind(c, name='poroMAILx_GetNbGpByElem')
      implicit none

      type(c_ptr) :: elems, nbgps_m, nbgps_t
      integer(c_int) :: esize, ssize, nsize_m, nsize_t
      !
      character(len=5), dimension(:), pointer :: names
      integer(c_int)  , dimension(:), pointer :: n_GPs_m, n_GPs_t

      ssize = 5

      call get_nb_gp_by_elem_poroMAILx(names, n_GPs_m, n_GPs_t, esize)

      nsize_m = esize
      nsize_t = esize
      elems   = c_loc( names(1)   )
      nbgps_m = c_loc( n_GPs_m(1) )
      nbgps_t = c_loc( n_GPs_t(1) )

    end subroutine

END MODULE wrap_poroMAILx
